align consuming resource check (#426)
* align consuming resource check